better embeddings; better early stopping; better grid search; better everything!

--- a/notebooks/Neural Network.ipynb
+++ b/notebooks/Neural Network.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "[3 rows x 1001 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "((10000, 2049), (2000, 2049))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -477,13 +477,25 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pd.Series(pics_train.mean(0)).describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text_train = np.load('tf_desc_train.npy')\n",
+    "text_test = np.load('tf_desc_test.npy')\n",
+    "tags_train = np.load('tf_tags_train.npy')\n",
+    "tags_test = np.load('tf_tags_test.npy')"
    ]
   },
   {
@@ -502,10 +514,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.save('text_train_full_wbert',text_train)\n",
-    "np.save('pics_train_full_wbert',pics_train)\n",
-    "np.save('text_test_full_wbert',text_test)\n",
-    "np.save('pics_test_full_wbert',pics_test)\n",
+    "np.save('text_train_tf',text_train)\n",
+    "np.save('pics_train_tf',pics_train)\n",
+    "np.save('text_test_tf',text_test)\n",
+    "np.save('pics_test_tf',pics_test)\n",
     "# text_train = np.load('text_train_full.npy')\n",
     "# pics_train = np.load('pics_train_full.npy')\n",
     "# text_test = np.load('text_test_full.npy')\n",
