--- a/notebooks/Which Embedding is Best.ipynb
+++ b/notebooks/Which Embedding is Best.ipynb
@@ -682,6 +682,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tensorflow embeddings https://tfhub.dev/google/universal-sentence-encoder/4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow_hub as hub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "documents_train = [] ## list of paragraphs\n",
+    "for i in range(10000):\n",
+    "    with open('../descriptions_train/%d.txt' % (i,)) as f:\n",
+    "        documents_train.append(f.read().replace('\\n',''))\n",
+    "        \n",
+    "documents_test = [] ## list of paragraphs\n",
+    "for i in range(2000):\n",
+    "    with open('../descriptions_test/%d.txt' % (i,)) as f:\n",
+    "        documents_test.append(f.read().replace('\\n',''))\n",
+    "\n",
+    "tag_docs_train = [] ## word jumble\n",
+    "for i in range(10000):\n",
+    "    with open('../tags_train/%d.txt' % (i,),'r') as f:\n",
+    "        tag_docs_train.append(' '.join([word for line in f.read().split('\\n') for word in line.split(':') if word]))\n",
+    "\n",
+    "tag_docs_test = [] ## word jumble\n",
+    "for i in range(2000):\n",
+    "    with open('../tags_test/%d.txt' % (i,),'r') as f:\n",
+    "        tag_docs_test.append(' '.join([word for line in f.read().split('\\n') for word in line.split(':') if word]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed = hub.load(\"https://tfhub.dev/google/universal-sentence-encoder/4\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectors_desc = embed(documents_train).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectors_desc_test = embed(documents_test).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 512)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectors_desc.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_tags_train = set(i for i in range(10000) if not tag_docs_train[i])\n",
+    "res = embed([tag_docs_train[i] for i in range(10000) if i not in no_tags_train])\n",
+    "vectors_tags = np.zeros((10000,512))\n",
+    "counter = 0\n",
+    "for i in range(10000):\n",
+    "    if i not in no_tags_train:\n",
+    "        vectors_tags[i] = res[counter]\n",
+    "        counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_tags_test = set(i for i in range(2000) if not tag_docs_test[i])\n",
+    "res = embed([tag_docs_test[i] for i in range(2000) if i not in no_tags_test])\n",
+    "vectors_tags_test = np.zeros((2000,512))\n",
+    "counter = 0\n",
+    "for i in range(2000):\n",
+    "    if i not in no_tags_test:\n",
+    "        vectors_tags_test[i] = res[counter]\n",
+    "        counter += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = get_prediction(vectors_desc,vectors_tags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.132625, 300.848)"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate(preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('tf_desc_train',vectors_desc)\n",
+    "np.save('tf_tags_train',vectors_tags)\n",
+    "np.save('tf_desc_test',vectors_desc_test)\n",
+    "np.save('tf_tags_test',vectors_tags_test)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
