--- a/notebooks/Test_7.ipynb
+++ b/notebooks/Test_7.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,51 +19,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Description for train data\n",
-    "desc_files = len(os.listdir('descriptions_train'))\n",
+    "desc_files = len(os.listdir('../descriptions_train'))\n",
     "all_desc_train = []\n",
     "\n",
     "for i in range(desc_files):\n",
     "    empty_str = ''\n",
-    "    for line in open(f'descriptions_train/{i}.txt'):\n",
+    "    for line in open(f'../descriptions_train/{i}.txt'):\n",
     "        empty_str += line.replace('\\n',' ')\n",
     "    all_desc_train.append(empty_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Tags for train data\n",
-    "tag_files = len(os.listdir('tags_train'))\n",
+    "tag_files = len(os.listdir('../tags_train'))\n",
     "all_tags_train = []\n",
     "\n",
     "for i in range(tag_files):\n",
     "    nouns = ''\n",
-    "    for line in open(f'tags_train/{i}.txt'):\n",
+    "    for line in open(f'../tags_train/{i}.txt'):\n",
     "        nouns += line.replace(':',' ')\n",
     "    all_tags_train.append(nouns.replace('\\n', ' '))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Description for test data\n",
-    "desc_files = len(os.listdir('descriptions_test'))\n",
+    "desc_files = len(os.listdir('../descriptions_test'))\n",
     "all_desc_test = []\n",
     "\n",
     "for i in range(desc_files):\n",
     "    empty_str = ''\n",
-    "    for line in open(f'descriptions_test/{i}.txt'):\n",
+    "    for line in open(f'../descriptions_test/{i}.txt'):\n",
     "        empty_str += line.replace('\\n',' ')\n",
     "    all_desc_test.append(empty_str)"
    ]
@@ -75,12 +75,12 @@
    "outputs": [],
    "source": [
     "### Tags for test data\n",
-    "tag_files = len(os.listdir('tags_test'))\n",
+    "tag_files = len(os.listdir('../tags_test'))\n",
     "all_tags_test = []\n",
     "\n",
     "for i in range(tag_files):\n",
     "    nouns = ''\n",
-    "    for line in open(f'tags_test/{i}.txt'):\n",
+    "    for line in open(f'../tags_test/{i}.txt'):\n",
     "        nouns += line.replace(':',' ')\n",
     "    all_tags_test.append(nouns.replace('\\n', ' '))"
    ]
@@ -134,19 +134,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_1000 = pd.read_csv('features_train/features_resnet1000_train.csv', header=None)\n",
-    "train_2048 = pd.read_csv('features_train/features_resnet1000intermediate_train.csv', header=None)\n",
-    "test_1000 = pd.read_csv('features_test/features_resnet1000_test.csv', header=None)\n",
-    "test_2048 = pd.read_csv('features_test/features_resnet1000intermediate_test.csv', header=None)"
+    "train_1000 = pd.read_csv('../features_train/features_resnet1000_train.csv', header=None)\n",
+    "train_2048 = pd.read_csv('../features_train/features_resnet1000intermediate_train.csv', header=None)\n",
+    "test_1000 = pd.read_csv('../features_test/features_resnet1000_test.csv', header=None)\n",
+    "test_2048 = pd.read_csv('../features_test/features_resnet1000intermediate_test.csv', header=None)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +183,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'train_tags' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-5de6f2e4dabf>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_2048\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrain_tags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtest\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_1000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_2048\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_tags\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'train_tags' is not defined"
+     ]
+    }
+   ],
    "source": [
     "train = np.hstack((train_1000, train_2048, train_tags))\n",
     "test = np.hstack((test_1000, test_2048, test_tags))"
@@ -193,20 +205,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((10000, 10301), (10000, 13349), (2000, 10301), (2000, 13349))"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "train_desc.shape, train.shape, test_desc.shape, test.shape"
    ]
