--- a/notebooks/Test_7_uni_ridge.ipynb
+++ b/notebooks/Test_7_uni_ridge.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,42 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "stop_words = set(nltk.corpus.stopwords.words(\"english\"))\n",
-    "vectorizer = TfidfVectorizer(stop_words=stop_words, min_df=2)\n",
-    "vectorizer.fit(all_docs);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_desc = vectorizer.transform(all_desc_train)\n",
-    "test_desc = vectorizer.transform(all_desc_test)\n",
-    "train_tags = vectorizer.transform(all_tags_train)\n",
-    "test_tags = vectorizer.transform(all_tags_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_desc = np.array(train_desc.todense())\n",
-    "test_desc = np.array(test_desc.todense())\n",
-    "train_tags = np.array(train_tags.todense())\n",
-    "test_tags = np.array(test_tags.todense())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -180,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Google embedding\n",
+    "#tf.enable_eager_execution()\n",
+    "embed = hub.load(\"https://tfhub.dev/google/universal-sentence-encoder/4\")\n",
+    "### Overwrite old train_desc and test_desc\n",
+    "train_desc = embed(all_desc_train).numpy()\n",
+    "test_desc = embed(all_desc_test).numpy()\n",
+    "train_tags = embed(all_tags_train).numpy()\n",
+    "test_tags = embed(all_tags_test).numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,21 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Google embedding\n",
-    "#tf.enable_eager_execution()\n",
-    "embed = hub.load(\"https://tfhub.dev/google/universal-sentence-encoder/4\")\n",
-    "### Overwrite old train_desc and test_desc\n",
-    "train_desc_tf = embed(all_desc_train).numpy()\n",
-    "test_desc_tf = embed(all_desc_test).numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -238,10 +205,10 @@
     {
      "data": {
       "text/plain": [
-       "((10000, 5931), (10000, 3048), (2000, 5931), (2000, 3048))"
+       "((10000, 512), (10000, 3048), (2000, 512), (2000, 3048))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,41 +219,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Set PCA Dimensions\n",
-    "pca = PCA(n_components = 100)\n",
-    "pca.fit(train_pic)\n",
-    "train_pic = pca.transform(train_pic)\n",
-    "test_pic = pca.transform(test_pic)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((10000, 512), (10000, 3048), (2000, 512), (2000, 3048))"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "train_desc.shape, train_pic.shape, test_desc.shape, test_pic.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_prediction(vecs,pics):\n",
-    "    assert vecs[0].shape[0]==pics.shape[0]\n",
-    "    dists = np.zeros((pics.shape[0],pics.shape[0]))\n",
-    "    for vec in vecs:\n",
-    "        dists += pairwise_distances(vec,pics,metric='cosine')\n",
-    "    dists = dists/len(vecs)\n",
-    "    return dists.argsort(1)\n",
+    "    dists = pairwise_distances(vecs,pics,metric='cosine')\n",
+    "    return dists.T.argsort(1)\n",
     "def map_20(ranks):\n",
     "    return np.mean([(20-rank)/20 if rank<20 else 0 for rank in ranks])\n",
     "def evaluate(vectors,label_vectors):\n",
@@ -304,30 +265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(34.9365, 0.506475)\n",
-      "(36.5815, 0.5003749999999999)\n",
-      "(35.4395, 0.495025)\n",
-      "(33.8835, 0.48664999999999997)\n",
-      "(36.488, 0.4963)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "kf = KFold(n_splits=5)\n",
-    "regr = Ridge()\n",
-    "\n",
-    "for train_index, test_index in kf.split(train_pic):\n",
-    "    regr.fit(train_desc[train_index], train_pic[train_index])\n",
-    "    pred = regr.predict(train_desc[test_index])\n",
-    "    output = evaluate([pred], train_pic[test_index])\n",
-    "    print(output)"
+    "from sklearn.linear_model import RidgeCV"
    ]
   },
   {
@@ -339,152 +281,85 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(36.097, 0.48264999999999997)\n",
-      "(36.131, 0.48297500000000004)\n",
-      "(35.9415, 0.480125)\n",
-      "(34.4185, 0.4703)\n",
-      "(37.097, 0.47382500000000005)\n"
+      "(7.526, 0.7270999999999999)\n",
+      "(7.78, 0.7249249999999999)\n",
+      "(7.6995, 0.72385)\n",
+      "(7.1675, 0.73025)\n",
+      "(7.383, 0.719275)\n"
      ]
     }
    ],
    "source": [
     "kf = KFold(n_splits=5)\n",
-    "regr = Ridge()\n",
-    "\n",
+    "rcv = RidgeCV(alphas=np.linspace(1.3,8,20))\n",
     "for train_index, test_index in kf.split(train_pic):\n",
-    "    regr.fit(train_desc[train_index], train_pic[train_index])\n",
-    "    pred = regr.predict(train_desc[test_index])\n",
-    "    regr.fit(train_desc_tf[train_index], train_pic[train_index])\n",
-    "    pred2 = regr.predict(train_desc_tf[test_index])\n",
-    "    output = evaluate([pred,pred2], train_pic[test_index])\n",
+    "    rcv.fit(train_pic[train_index], train_desc[train_index])\n",
+    "    pred = rcv.predict(train_pic[test_index])\n",
+    "    output = evaluate(pred, train_desc[test_index])\n",
     "    print(output)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(33.367, 0.51175)\n",
-      "(33.469, 0.51195)\n",
-      "(33.8685, 0.5110750000000001)\n",
-      "(31.6135, 0.49965)\n",
-      "(34.629, 0.506875)\n"
-     ]
-    }
-   ],
-   "source": [
-    "kf = KFold(n_splits=5)\n",
-    "regr = Ridge()\n",
-    "train_desc = np.hstack([train_desc,train_desc_tf])\n",
-    "for train_index, test_index in kf.split(train_pic):\n",
-    "    regr.fit(train_desc[train_index], train_pic[train_index])\n",
-    "    pred = regr.predict(train_desc[test_index])\n",
-    "    output = evaluate([pred], train_pic[test_index])\n",
-    "    print(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.preprocessing import PolynomialFeatures"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poly = PolynomialFeatures(interaction_only=True,include_bias=False)\n",
-    "train_desc_b = poly.fit_transform(train_desc)"
+    "regr.fit(train_desc, train_pic)\n",
+    "prediction = regr.predict(test_desc)\n",
+    "preds = get_prediction(prediction, test_pic)\n",
+    "save_submission()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_desc.shape"
+    "import xgboost as xgb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_desc_b.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# regr.fit(train_desc, train_pic)\n",
-    "# prediction = regr.predict(test_desc)\n",
-    "# preds = get_prediction(prediction, test_pic)\n",
-    "# save_submission()"
+    "bst = xgb.XGBRegressor()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipeline = Pipeline([\n",
-    "('tfidf',TfidfVectorizer(stop_words=stop_words, min_df=2)),\n",
-    "('ridge',Ridge())\n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(37.6075, 0.48457500000000003)\n",
-      "(36.19, 0.50375)\n",
-      "(33.9805, 0.48605)\n",
-      "(35.2325, 0.509925)\n",
-      "(33.248, 0.49900000000000005)\n"
+      "[22:09:16] WARNING: src/objective/regression_obj.cu:152: reg:linear is now deprecated in favor of reg:squarederror.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "             colsample_bynode=1, colsample_bytree=1, gamma=0,\n",
+       "             importance_type='gain', learning_rate=0.1, max_delta_step=0,\n",
+       "             max_depth=3, min_child_weight=1, missing=None, n_estimators=100,\n",
+       "             n_jobs=1, nthread=None, objective='reg:linear', random_state=0,\n",
+       "             reg_alpha=0, reg_lambda=1, scale_pos_weight=1, seed=None,\n",
+       "             silent=None, subsample=1, verbosity=1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "kf = KFold(n_splits=5,shuffle=True)\n",
-    "all_desc_train = np.array(all_desc_train)\n",
-    "all_desc_test = np.array(all_desc_test)\n",
-    "\n",
-    "for train_index, test_index in kf.split(train_pic):\n",
-    "    pipeline.fit(all_desc_train[train_index], train_pic[train_index])\n",
-    "    pred = pipeline.predict(all_desc_train[test_index])\n",
-    "    output = evaluate(pred, train_pic[test_index])\n",
-    "    print(output)"
+    "bst.fit(train_pic, train_desc)"
    ]
   },
   {
